# bstl

./: Cargo.toml  README.md
examples/: bstl.rune  bstl.toml
src/: app.rs  config.rs  events.rs  icons.rs  launch.rs  main.rs  menu.rs  storage.rs  sway.rs
src/ui/: dual_pane.rs  layout.rs  mod.rs  single_pane.rs
