[package]
name = "bstl"
version = "0.3.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
eyre = "0.6.12"
fuzzy-matcher = "0.3.7"
libc = "0.2.180"
nerd-font-symbols = "0.3.0"
once_cell = "1.21.3"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tui-input = { version = "0.15.0", default-features = false, features = ["crossterm"] }
ratatui = "0.30.0"
rune-cfg = "0.4.1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
quick-xml = "0.36"
